# med_center

./: .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Makefile  README.md  deploy.sh  entrypoint.sh  manage.py  pyproject.toml
core/: celery.py
core/api/: schemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/medcenter/: filters.py  handlers.py  urls.py
core/apps/account/: admin.py  apps.py  backends.py  forms.py  urls.py  views.py
core/apps/account/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_user_phone_alter_user_email_alter_user_role.py  0004_alter_user_options.py
core/apps/account/models/: user.py
core/apps/common/: models.py
core/apps/medcenter/: __init__.py  admin.py  apps.py  tasks.py  urls.py  views.py
core/apps/medcenter/entities/: __init__.py  appointment.py  doctor.py  doctor_schedule.py  person.py  (+4 more)
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: local.py  main.py  prod.py
core/templates/: base.html  index.html
core/templates/account/: login.html  logout.html  profile.html  signup.html
core/templates/admin/: base_site.html
core/templates/medcenter/: account.html  base.html  home.html  queue.html  ticket_progress.html
docker_compose/: app.yaml  docker-compose.build.yaml  docker-compose.prod.yaml  storages.yaml
docker_compose/nginx/conf/: default.conf
medcenter_pages/: package-lock.json  package.json
medcenter_pages/src/: App.js
medcenter_pages/src/pages/: AccountPage.css  AccountPage.jsx  HomePage.css  HomePage.jsx  base.css
static_src/admin/css/: custom.css
tests/services/person/: conftest.py  test_person.py
(+53 files in other folders)
